<resources>
    <string name="app_name">SantanderWeek</string>
    <string name="txt_saldo_disponivel">Saldo Disponível</string>
    <string name="saldo_limite">Saldo + Limite</string>
    <string name="ver_extrato">Ver Extrato</string>
    <string name="text_pagar">Pagar</string>
    <string name="text_transferir">Transferir</string>
    <string name="cartao_final">Cartão Final</string>
    <string name="notificacao">Notificação</string>
</resources>